@@ -6,6 +6,7 @@ Version 1.9.12+svn:
      (bug #15847)
  * User interface:
    * Removed blur from the add-ons description dialog
+   * Fixed bug #19121: Make click dismiss work properly.
  * Whiteboard:
    * Display turn numbers on multi-turn planned moves
  * Miscellaneous and bug fixes:
